created th product page and allow products to be added with validation, and update product contents in the default page

--- a/Web.config
+++ b/Web.config
@@ -14,4 +14,9 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+
+  <connectionStrings>
+    <add name="Dokeperuan" connectionString="Data Source = MSI\SQLEXPRESS;Initial Catalog=dokeperuan;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
 </configuration>
